B-F Sandbox Full-Backup/src/objects/CallPlan__c.object
<CustomObject>
    <description>BFA Call Plan Object</description>
    <fields>
        <fullName>Cycle__c</fullName>
        <description>BFA</description>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScheduleDate__c</fullName>
        <description>BFA Schedule CallPlan Date</description>
        <label>ScheduleDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>BFA - Checked is true</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <description>BFA</description>
        <label>Week</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bf_CallPlan_Code__c</fullName>
        <description>BFA Callplan Code</description>
        <label>bf_CallPlan_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bf_CallType_Code__c</fullName>
        <description>BFA</description>
        <label>bf_CallType_Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bf_Outlet_Number__c</fullName>
        <description>BFA Outlet Number for CallCard</description>
        <label>bf_Outlet_Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bf_Rep_Code__c</fullName>
        <description>BFA bf_Rep_Code object</description>
        <label>bf_Rep_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CallPlan</label>
    <nameField>
        <label>CallPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CallPlans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>